# plan2table

./: .gitignore  AGENTS.md  Dockerfile  Makefile  PR_COMMENT.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  utils.py
.github/workflows/: lint.yml  sync-to-hf-spaces.yml
app/: main.py
app/core/: __init__.py  (+3 more)
data/: me-check_照合結果_20260216_0659.csv  raster.csv  vector.csv  ventilation_equipment_merged.csv  ventilation_equipment_merged.xlsx  ventilation_equipment_merged_flat.csv
docs/: Tesseract vs Google Vision API OCR精度比較.md  architecture.md  e-055-detail.md  e-055-faq.md  e-055.md  e-142.md  e-251-detail.md  e-251-faq.md  e-251.md  e142-detail.md  e142-faq.md  how-to-parse.md  m-e-check-detail.md  m-e-check-faq.md  m-e-check.md  plan2table.md  setup.md
extractors/: __init__.py  area_regex.py  common.py  csv_utils.py  e055_extractor.py  e142_extractor.py  e251_extractor.py  job_store.py  raster_extractor.py  skills.py  text_extractor.py  tool_definitions.py  unified_csv.py  vector_extractor.py
prompts/: __init__.py  area_extract.md
routers/: downloads.py  pages.py
scripts/: pre-commit  pre-push
services/: job_runner.py
static/: shared-ui.css  shared-ui.js
templates/: area.html  develop.html  e-055.html  e-142.html  e-251.html  index.html  me-check.html
tests/: conftest.py  helpers.py  test_area_regex.py  test_e055_extractor.py  test_e142_extractor.py  test_e251_extractor.py  test_integration_routes.py  test_job_store.py  test_prompt_load.py  test_raster_extractor.py  test_unified_csv.py  test_vector_extractor.py
(+11 files in other folders)
