[project]
name = "plan2table"
requires-python = ">=3.14"

[tool.ruff]
target-version = "py314"
line-length = 88
exclude = [".git", "__pycache__", ".venv", "static"]

[tool.ruff.lint]
# フォーマットは Black に任せる（Ruff はリントのみ実行）

[tool.black]
line-length = 88
target-version = ["py314"]
exclude = '\.git|__pycache__|\.venv|static'

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::FutureWarning:google.api_core",
    "ignore::FutureWarning:google.auth",
    "ignore::FutureWarning:google.oauth2",
    "ignore::urllib3.exceptions.NotOpenSSLWarning",
    "ignore::pydantic.PydanticDeprecatedSince212:google.genai",
    "ignore::DeprecationWarning:google.genai.types",
]
